@@ -21,6 +21,7 @@ import javax.ws.rs.Consumes;
 import javax.ws.rs.POST;
 import javax.ws.rs.PUT;
 import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.Context;
 import javax.ws.rs.core.HttpHeaders;
@@ -42,32 +43,92 @@ import org.apache.tika.server.MetadataList;
 
 @Path("/rmeta")
 public class RecursiveMetadataResource {
+
+    private static final String HANDLER_TYPE_PARAM = "handler";
+    private static final BasicContentHandlerFactory.HANDLER_TYPE DEFAULT_HANDLER_TYPE =
+            BasicContentHandlerFactory.HANDLER_TYPE.XML;
     private static final Log logger = LogFactory.getLog(RecursiveMetadataResource.class);
 
+    /**
+     * Returns an InputStream that can be deserialized as a list of
+     * {@link Metadata} objects.
+     * The first in the list represents the main document, and the
+     * rest represent metadata for the embedded objects.  This works
+     * recursively through all descendants of the main document, not
+     * just the immediate children.
+     * <p>
+     * The extracted text content is stored with the key
+     * {@link RecursiveParserWrapper#TIKA_CONTENT}.
+     * <p>
+     * Specify the handler for the content (xml, html, text, ignore)
+     * in the path:<br/>
+     * /rmeta/form (default: xml)<br/>
+     * /rmeta/form/xml    (store the content as xml)<br/>
+     * /rmeta/form/text   (store the content as text)<br/>
+     * /rmeta/form/ignore (don't record any content)<br/>
+     *
+     * @param att attachment
+     * @param info uri info
+     * @param handlerTypeName which type of handler to use
+     * @return InputStream that can be deserialized as a list of {@link Metadata} objects
+     * @throws Exception
+     */
     @POST
     @Consumes("multipart/form-data")
-    @Produces({"text/csv", "application/json"})
-    @Path("form")
-    public Response getMetadataFromMultipart(Attachment att, @Context UriInfo info) throws Exception {
+    @Produces({"application/json"})
+    @Path("form{"+HANDLER_TYPE_PARAM+" : (\\w+)?}")
+    public Response getMetadataFromMultipart(Attachment att, @Context UriInfo info,
+                                             @PathParam(HANDLER_TYPE_PARAM) String handlerTypeName)
+            throws Exception {
         return Response.ok(
-                parseMetadata(att.getObject(InputStream.class), att.getHeaders(), info)).build();
+                parseMetadata(att.getObject(InputStream.class), att.getHeaders(), info, handlerTypeName)).build();
     }
+
+    /**
+     * Returns an InputStream that can be deserialized as a list of
+     * {@link Metadata} objects.
+     * The first in the list represents the main document, and the
+     * rest represent metadata for the embedded objects.  This works
+     * recursively through all descendants of the main document, not
+     * just the immediate children.
+     * <p>
+     * The extracted text content is stored with the key
+     * {@link RecursiveParserWrapper#TIKA_CONTENT}.
+     * <p>
+     * Specify the handler for the content (xml, html, text, ignore)
+     * in the path:<br/>
+     * /rmeta (default: xml)<br/>
+     * /rmeta/xml    (store the content as xml)<br/>
+     * /rmeta/text   (store the content as text)<br/>
+     * /rmeta/ignore (don't record any content)<br/>
+     *
+     * @param info uri info
+     * @param handlerTypeName which type of handler to use
+     * @return InputStream that can be deserialized as a list of {@link Metadata} objects
+     * @throws Exception
+     */
 
     @PUT
     @Produces("application/json")
-    public Response getMetadata(InputStream is, @Context HttpHeaders httpHeaders, @Context UriInfo info) throws Exception {
+    @Path("{"+HANDLER_TYPE_PARAM+" : (\\w+)?}")
+    public Response getMetadata(InputStream is,
+                                @Context HttpHeaders httpHeaders,
+                                @Context UriInfo info,
+                                @PathParam(HANDLER_TYPE_PARAM) String handlerTypeName
+                                ) throws Exception {
         return Response.ok(
-                parseMetadata(is, httpHeaders.getRequestHeaders(), info)).build();
+                parseMetadata(is, httpHeaders.getRequestHeaders(), info, handlerTypeName)).build();
     }
 
 	private MetadataList parseMetadata(InputStream is,
-			MultivaluedMap<String, String> httpHeaders, UriInfo info)
+			MultivaluedMap<String, String> httpHeaders, UriInfo info, String handlerTypeName)
 			throws Exception {
 		final Metadata metadata = new Metadata();
 		final ParseContext context = new ParseContext();
 		Parser parser = TikaResource.createParser();
-		// TODO: parameterize choice of handler and max chars?
-		BasicContentHandlerFactory.HANDLER_TYPE type = BasicContentHandlerFactory.HANDLER_TYPE.TEXT;
+		// TODO: parameterize choice of max chars/max embedded attachments
+		BasicContentHandlerFactory.HANDLER_TYPE type =
+                BasicContentHandlerFactory.parseHandlerType(handlerTypeName, DEFAULT_HANDLER_TYPE);
 		RecursiveParserWrapper wrapper = new RecursiveParserWrapper(parser,
 				new BasicContentHandlerFactory(type, -1));
 		TikaResource.fillMetadata(parser, metadata, context, httpHeaders);
